[tool.poetry]
name = "django-lb-health-check"
version = "0.1.0"
description = "Middleware based health check for Django"
authors = ["Adam Peacock <adam@thepeacock.net>"]
license = "MIT"
packages = [
    { include = "lb_health_check" },
]

[tool.poetry.dependencies]
python = ">=3.6"
Django = ">=2.2"

[tool.poetry.dev-dependencies]
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
