[tool.poetry]
name = "django-lb-health-check"
version = "0.1.1"
description = "Middleware based health check for Django"
authors = ["Adam Peacock <adam@thepeacock.net>"]
license = "MIT"
packages = [
    { include = "lb_health_check" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
include = [
    "LICENSE"
]
readme = "Readme.md"
homepage = "https://github.com/Hovercross/django-lb-health-check"
repository = "https://github.com/Hovercross/django-lb-health-check"
keywords = ["django", "health", "alive", "check"]
[tool.poetry.dependencies]
python = ">=3.6"
Django = ">=2.2"

[tool.poetry.dev-dependencies]
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
